app aligned to center, higher app logo

--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,9 @@
 .App {
-  text-align: left;
+  text-align: center;
 }
 
 .App-logo {
-  height: 40vmin;
+  height: 60vmin;
   pointer-events: none;
 }
 
